<resources>
    <string name="app_name">News</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="auth_arg_email">Email</string>
    <string name="auth_arg_password">Password</string>
    <string name="auth_arg_confirm_password">Confirm Password</string>
    <string name="auth_arg_log_in">Log In</string>
    <string name="auth_arg_sign_up_with_google">Sign Up With Google</string>
    <string name="auth_arg_don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="auth_arg_full_name">Full Name</string>
    <string name="auth_arg_register">Register</string>
    <string name="auth_arg_already_have_an_account_log_in">Already have an account? Log in!</string>
    <string name="item_placeholder_title">TITLE</string>
    <string name="item_imgv_content_the_image_of_the_news">The image of the news</string>
    <string name="search_arg">Search…</string>
    <string name="no_data_was_found_text">No data was found!</string>
    <string name="article_image_no_content">Article Image</string>
    <string name="content_desc_add_to_favourites">Add to favourites</string>
    <string name="btn_content_delete_from_favourites">Delete from favourites</string>
    <string name="placeholder_full_name">Full Name</string>
    <string name="placeholder_marcelgigi_gmail_com">marcelGigi@gmail.com</string>
    <string name="args_log_out">Log Out</string>
    <string name="spash_img_logo">Logo</string>
    <string name="google_sign_up">Google Sign Up</string>
</resources>